WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14758
REGRESSION: Repeated text after line break on facebook.com
https://bugs.webkit.org/show_bug.cgi?id=14758
Summary
REGRESSION: Repeated text after line break on facebook.com
mitz
Reported
2007-07-24 14:09:31 PDT
Several lines on the page in the URL the are supposed to wrap just before a link are duplicated after the break, with the link tacked on the same line as the duplicate. Going to attach a reduction and try to find out if it was the bidi algorithm patch or the break-all/break-word patch that broke this (I am pretty sure it was one of them).
Attachments
Reduction
(224 bytes, text/html)
2007-07-24 14:10 PDT
,
mitz
no flags
Details
Reduction
(110 bytes, text/html)
2007-07-24 14:18 PDT
,
mitz
no flags
Details
Re-add two lines that were removed for absolutely no reason in r24485
(35.00 KB, patch)
2007-07-24 15:38 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-07-24 14:10:30 PDT
Created
attachment 15671
[details]
Reduction
mitz
Comment 2
2007-07-24 14:18:14 PDT
Created
attachment 15672
[details]
Reduction Smaller reduction
mitz
Comment 3
2007-07-24 15:10:50 PDT
Got a fix. Running tests now.
mitz
Comment 4
2007-07-24 15:38:36 PDT
Created
attachment 15673
[details]
Re-add two lines that were removed for absolutely no reason in
r24485
No layout test regressions. Includes a new layout test to ensure even I don't do it again.
Darin Adler
Comment 5
2007-07-24 15:39:32 PDT
Comment on
attachment 15673
[details]
Re-add two lines that were removed for absolutely no reason in
r24485
r=me
David Kilzer (:ddkilzer)
Comment 6
2007-07-24 21:27:48 PDT
<
rdar://problem/5359088
>
Darin Adler
Comment 7
2007-07-25 08:53:32 PDT
Committed revision 24621.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug