LayoutTests:

Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=14758
          REGRESSION: Repeated text after line break on facebook.com

        * fast/text/reset-emptyRun-expected.checksum: Added.
        * fast/text/reset-emptyRun-expected.png: Added.
        * fast/text/reset-emptyRun-expected.txt: Added.
        * fast/text/reset-emptyRun.html: Added.

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=14758
          REGRESSION: Repeated text after line break on facebook.com

        Test: fast/text/reset-emptyRun.html

        * platform/BidiResolver.h:
        (WebCore::::deleteRuns): Re-add a line that was removed for no reason at all
        during refactoring in r24485.
        * rendering/bidi.cpp:
        (WebCore::BidiState::deleteRuns): Ditto.



Canonical link: https://commits.webkit.org/19226@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24621 268f45cc-cd09-0410-ab3c-d52691b4dbfc